fixed fullscreen modals on mobile

--- a/src/components/UI/Modal/Modal.module.scss
+++ b/src/components/UI/Modal/Modal.module.scss
@@ -11,8 +11,6 @@ $max-width: 600px;
   background-color: rgba(17, 17, 17, 0.47);
   display: flex;
   justify-content: center;
-
-
 }
 
 .body {
@@ -33,7 +31,6 @@ $max-width: 600px;
   }
 
   @media screen and (max-width: 650px) {
-    margin: 10px 0;
     width: auto;
   }
 }
